verif/test/deca/context/invalid/object/bad-param-verif.res
src/test/deca/context/invalid/object/bad-param.deca:10:9: no viable alternative at input 'Point('
